<resources>
    <string name="app_name">NjMovies</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="nav_open">Open</string>
    <string name="nav_close">Close</string>
    <string name="MyList">My List</string>
    <string name="Setting">Setting</string>
    <string name="Logout">Logout</string>
    <string name="Login">Login</string>
    <string name="Login_to_continue">Login to Continue</string>
    <string name="you_do_not_have_an_account">You Do Not Have an account?</string>
    <string name="Register">Register</string>
    <string name="create_an_account">Create an Account</string>
    <string name="sign_up_to_continue">Sign up to Continue</string>
    <string name="name">Name</string>
    <string name="already_have_an_account">Already Have an Account</string>
    <string name="Email">Email</string>
    <string name="Password">Password</string>

    <string name="popular">Popular</string>
    <string name="most_popular_movies">Most popular movies</string>
    <string name="now_playing">Now Playing</string>
    <string name="now_on_theaters">Now on theaters</string>
    <string name="top_rated">Top Rated</string>
    <string name="highest_rated_movies">Highest rated movies of all time</string>
    <string name="upcoming">Upcoming</string>
    <string name="stay_updated">Stay updated with the latest movies</string>
    <string name="error_fetch_movies">Please check your internet connection</string>
    <string name="change_language">تغيير اللغة</string>
    <string name="contact_support">Contact Support</string>
    <string name="here">Here</string>
</resources>